mambu-outbound-service/kubernetes-manifests/mambu-outbound.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mambu-outbound-service
  labels:
    app: mambu-outbound-service
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mambu-outbound-service
      tier: backend
  template:
    metadata:
      labels:
        app: mambu-outbound-service
        tier: backend
    spec:
      containers:
        - name: mambu-outbound-service
          image: mambu-outbound-service
          ports:
            - name: http
              containerPort: 8080
