mambu-outbound-service/kubernetes-manifests/mambu-dbs-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mambu-outbound-service
  labels:
    app: mambu-outbound-service
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: mambu-outbound-service
    tier: backend
  ports:
    - port: 8080
      targetPort: http
