mambu-outbound-service/kubernetes-manifests/mambu-outbound.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mambu-outbound
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: mambu-outbound.proto.backbasecloud.com
      http:
        paths:
          - backend:
              serviceName: mambu-outbound
              servicePort: http
            path: /
